# src/Api/Data/UnsubmittedOrganisationSortField.cs
@@ -2,8 +2,8 @@ namespace Defra.WasteObligations.Api.Data;
 
 public enum UnsubmittedOrganisationSortField
 {
-    OrganisationName,
-    OrganisationReferenceNumber,
-    RecyclingObligations,
-    PercentageMet,
+    Name,
+    ReferenceNumber,
+    RecyclingObligationsMet,
+    ObligationCoveragePercentage,
 }
