# src/Api/Endpoints/ComplianceDeclarations/SearchUnsubmittedComplianceDeclarations.cs
@@ -52,8 +52,8 @@ public static class SearchUnsubmittedComplianceDeclarations
                     OrganisationId = x.OrganisationId,
                     ObligationYear = x.ObligationYear,
                     RegistrationType = x.RegistrationType.ToDto(),
-                    OrganisationName = x.Name,
-                    OrganisationReferenceNumber = x.ReferenceNumber,
+                    Name = x.Name,
+                    ReferenceNumber = x.ReferenceNumber,
                     RecyclingObligationsMet = x.RecyclingObligationsMet,
                     ObligationCoveragePercentage = x.ObligationCoveragePercentage,
                 }),
